[tool.poetry]
name = "seongjun-reranker"
version = "0.1.0"
description = ""
authors = ["SonAIengine <sonsj97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.2.0"
torch = "^2.5.1"
transformers = "^4.47.1"
accelerate = ">=0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
